deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-frontend-service
spec:
  selector:
    app: bank-frontend-service
  ports:
    - protocol: TCP
      port: 3000   # The service port exposed internally
      targetPort: 3000  # Container port where your Spring Boot app listens
  type: ClusterIP  # Change LoadBalancer to ClusterIP
