deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  labels:
    name: bank-ingress
    
spec:
  tls:
    - hosts:
        - bank.cloudwitches.online
        - bankapi.cloudwitches.online
      secretName: bank-tls-secret
  ingressClassName: nginx
  rules:
  - host: bank.cloudwitches.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-frontend-service
            port: 
              number: 3000
  - host: bankapi.cloudwitches.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-backend-service
            port: 
              number: 8080
